# wth-rpi

./: README.md  ch-prompt.txt  en-prompt.txt  pyproject.toml
src/: __main__.py  mic.py  microphone.py  text2speech.py
